--- a/200.html
+++ b/200.html
@@ -11,5 +11,5 @@
 <link rel="prefetch" as="script" crossorigin href="/NFT-Unigecard/_nuxt/BKQyrveS.js">
 <link rel="prefetch" as="script" crossorigin href="/NFT-Unigecard/_nuxt/5yv5k1bz.js">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
-<script type="module" src="/NFT-Unigecard/_nuxt/Dtu0JvHn.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1746001532039,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{proxyAddress:""},app:{baseURL:"/NFT-Unigecard/",buildId:"f4cd3588-3d82-4558-8557-2ab7b46e755e",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/NFT-Unigecard/_nuxt/Dtu0JvHn.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1746002304688,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{proxyAddress:"0xA13d9d004ECC11740006dEFFc9C20Ee9cEa61353"},app:{baseURL:"/NFT-Unigecard/",buildId:"a0bcb097-d12a-4731-ad4c-6646487618a6",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
