--- a/404.html
+++ b/404.html
@@ -10,6 +10,6 @@
 <link rel="prefetch" as="script" crossorigin href="/NFT-Unigecard/_nuxt/BIq0j3qX.js">
 <link rel="prefetch" as="script" crossorigin href="/NFT-Unigecard/_nuxt/Cr1mmVXe.js">
 <link rel="prefetch" as="script" crossorigin href="/NFT-Unigecard/_nuxt/CJoZd2kP.js">
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
-<script type="module" src="/NFT-Unigecard/_nuxt/R504iwNs.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1746003394636,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{proxyAddress:"0xA13d9d004ECC11740006dEFFc9C20Ee9cEa61353"},app:{baseURL:"/NFT-Unigecard/",buildId:"cfb61f8e-f4a2-484c-b6cd-736919c605a7",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="icon" type="image/x-icon" href="/NFT-Unigecard/favicon.ico">
+<script type="module" src="/NFT-Unigecard/_nuxt/R504iwNs.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1746003713400,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{proxyAddress:"0xA13d9d004ECC11740006dEFFc9C20Ee9cEa61353"},app:{baseURL:"/NFT-Unigecard/",buildId:"475604d9-af18-4d8d-9b9d-d72ab61aaf3b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
